tests/purs/failing/DerivingClauseViaNotCoercible.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DerivingClauseViaNotCoercible.purs:13:1 - 13:34 (line 13, column 1 - line 13, column 34)

  Cannot derive via instance for
  [33m                     [0m
  [33m  Data.Show.Show Name[0m
  [33m                     [0m
  The via type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m
  is not coercible with the instance type
  [33m      [0m
  [33m  Name[0m
  [33m      [0m
  Both types must have the same runtime representation.


See https://github.com/purescript/documentation/blob/master/errors/NotCoercibleViaType.md for more information,
or to contribute content related to this error.

